Added Portugal sources and LanguageDao

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="english">Angielski</string>
     <string name="polish">Polski</string>
     <string name="spanish">Hiszpański</string>
+    <string name="portugal">Portgalski</string>
     <string name="german">Niemiecki</string>
     <string name="italian">Włoski</string>
     <string name="french">Francuski</string>
