--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,9 @@
     <string name="previous_words">Wróć do wcześniejszych słówek</string>
     <string name="choose_main_language">Wybierz język, którego się uczysz</string>
     <string name="choose_translation_language">Wybierz język tłumaczenia</string>
-    <string name="show_more_results">POKAŻ WIĘCEJ WYNIKÓW ⤵</string>
+    <string name="show_more_results">Pokaż więcej wyników⠀⬇</string>
     <string name="word_search_results">Wyniki wyszukiwania frazy \"%1$s\"</string>
+    <string name="main_lyrics_search_result">Wyniki wyszukiwania</string>
+    <string name="similiar_lyrics_search_result">Podobne wyszukiwania</string>
     <string name="no_word_search_results">Niestety nie znaleźliśmy w naszej bazie żadnego zastosowania frazy \"%1$s\"</string>
 </resources>
