Changed project name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Words Life</string>
+    <string name="app_name">Lyricated</string>
     <string name="english">angielski</string>
     <string name="polish">polski</string>
     <string name="spanish">hiszpański</string>
