--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -21,4 +21,6 @@
     <string name="season">Sezon</string>
     <string name="episode">Odcinek</string>
     <string name="time">Czas</string>
+    <string name="movie">Film</string>
+    <string name="series">Serial</string>
 </resources>
