Changed design of Lyric Fragment

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -26,4 +26,6 @@
     <string name="production">Producción</string>
     <string name="vocabulary">Vocabulario</string>
     <string name="translation">Traducción</string>
+    <string name="lyric">Letra</string>
+    <string name="details">Detalles de la letra</string>
 </resources>
