--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="production">Production</string>
     <string name="vocabulary">Vocabulary</string>
     <string name="translation">Translation</string>
+    <string name="lyric">Lyric</string>
+    <string name="details">Details of the lyric</string>
 </resources>
