--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -13,7 +13,7 @@
     <string name="choose_translation_language">Wybierz język tłumaczenia</string>
     <string name="show_more_results">Pokaż więcej wyników</string>
     <string name="main_lyrics_search_result">Wyniki wyszukiwania</string>
-    <string name="similiar_lyrics_search_result">Podobne wyszukiwania</string>
+    <string name="similiar_lyrics_search_result">Podobne wyniki</string>
     <string name="no_word_search_results">Niestety nie znaleźliśmy zastosowania frazy \"%1$s\"</string>
     <string name="filter">Filtruj</string>
     <string name="sort">Sortuj</string>
