--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="length_of_phrase">Length of phrase</string>
     <string name="from_the_longest">From the longest</string>
     <string name="from_the_shortest">From the shortest</string>
+    <string name="type">Type</string>
+    <string name="only_movies">Only movies</string>
+    <string name="only_series">Only series</string>
+    <string name="curses">Curses</string>
+    <string name="without_curses">Without curses</string>
 </resources>
