--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -38,4 +38,5 @@
     <string name="only_series">Tylko seriale</string>
     <string name="curses">Przekleństwa</string>
     <string name="without_curses">Bez przekleństw</string>
+    <string name="clear">Wyczyść</string>
 </resources>
