--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="only_series">Only series</string>
     <string name="curses">Curses</string>
     <string name="without_curses">Without curses</string>
+    <string name="clear">Clear</string>
 </resources>
