--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -9,6 +9,7 @@
     <string name="french">francuski</string>
     <string name="search">Szukaj</string>
     <string name="previous_words">Wróć do wcześniejszych słówek</string>
+    <string name="previous">wcześniejszych</string>
     <string name="choose_main_language">Wybierz język, którego się uczysz</string>
     <string name="choose_translation_language">Wybierz język tłumaczenia</string>
     <string name="show_more_results">Pokaż więcej wyników</string>
