--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -41,4 +41,5 @@
     <string name="curses">Maldiciones</string>
     <string name="without_curses">Sin maldiciones</string>
     <string name="clear">Limpiar</string>
+    <string name="library">Biblioteca</string>
 </resources>
