--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -41,4 +41,5 @@
     <string name="curses">Przekleństwa</string>
     <string name="without_curses">Bez przekleństw</string>
     <string name="clear">Wyczyść</string>
+    <string name="library">Biblioteka</string>
 </resources>
