--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -50,4 +50,5 @@
     <string name="study_mode_desc">Recordarse frases que buscaste antes</string>
     <string name="settings">Ajustes</string>
     <string name="settings_desc">Ajusta nuestra aplicación a tus preferencias</string>
+    <string name="latest_movie">En Lyricated encontrarás subtítulos de:</string>
 </resources>
