--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="study_mode_desc">Remember phrases you\'ve searched for before</string>
     <string name="settings">Settings</string>
     <string name="settings_desc">Adjust our app to your preferences</string>
+    <string name="latest_movie">In Lyricated you will find subtitles from:</string>
 </resources>
