--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -40,7 +40,7 @@
     <string name="choose_source">Wybierz film lub serial</string>
     <string name="curses">Przekleństwa</string>
     <string name="without_curses">Bez przekleństw</string>
-    <string name="clear">Wyczyść</string>
+    <string name="clear">Wyczyść filtry</string>
     <string name="library">Biblioteka</string>
     <string name="history">Historia</string>
     <string name="history_desc">Wróć do wcześniej wyszukiwanych wyrażeń</string>
@@ -51,4 +51,12 @@
     <string name="settings">Ustawienia</string>
     <string name="settings_desc">Dopasuj aplikację do swoich preferencji</string>
     <string name="latest_movie">W Lyricated znajdziesz napisy z:</string>
+    <string name="appearance">Wygląd aplikacji</string>
+    <string name="darkmode">Tryb ciemny</string>
+    <string name="lightmode">Tryb jasny</string>
+    <string name="edumaterials">Materiały edukacyjne</string>
+    <string name="show">Wyświetlaj</string>
+    <string name="dontshow">Nie wyświetlaj</string>
+    <string name="save">Zapisuj</string>
+    <string name="dontsave">Nie zapisuj</string>
 </resources>
