--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,6 +52,7 @@
     <string name="settings_desc">Ajusta nuestra aplicación a tus preferencias</string>
     <string name="latest_movie">En Lyricated encontrarás subtítulos de:</string>
     <string name="appearance">Apariencia</string>
+    <string name="defaultsetting">Defecto</string>
     <string name="darkmode">Modo oscuro</string>
     <string name="lightmode">Modo claro</string>
     <string name="edumaterials">Materiales educativos</string>
