--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -52,6 +52,7 @@
     <string name="settings_desc">Dopasuj aplikację do swoich preferencji</string>
     <string name="latest_movie">W Lyricated znajdziesz napisy z:</string>
     <string name="appearance">Wygląd aplikacji</string>
+    <string name="defaultsetting">Domyślny</string>
     <string name="darkmode">Tryb ciemny</string>
     <string name="lightmode">Tryb jasny</string>
     <string name="edumaterials">Materiały edukacyjne</string>
