--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="settings_desc">Adjust our app to your preferences</string>
     <string name="latest_movie">In Lyricated you will find subtitles from:</string>
     <string name="appearance">Appearance</string>
+    <string name="defaultsetting">Default</string>
     <string name="darkmode">Dark mode</string>
     <string name="lightmode">Light mode</string>
     <string name="edumaterials">Educational Materials</string>
