Now user can delete history and deselect all saved items

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -60,4 +60,6 @@
     <string name="dontshow">No mostrar</string>
     <string name="save">Guardar</string>
     <string name="dontsave">No guardar</string>
+    <string name="deletehistory">Eliminar la historia</string>
+    <string name="deselectall">Deseleccionar todo</string>
 </resources>
