Added Loading fragment to study mode

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -70,4 +70,7 @@
     <string name="random">Aleatorio</string>
     <string name="reveal_word">Revelar palabra</string>
     <string name="show_translation">Mostrar traducción</string>
+    <string name="loading">cargando resultado...</string>
+    <string name="tryto">intenta</string>
+    <string name="translate">traducir</string>
 </resources>
