--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,7 @@
     <string name="random">Random</string>
     <string name="reveal_word">Reveal word</string>
     <string name="show_translation">Show translation</string>
+    <string name="loading">loading result...</string>
+    <string name="tryto">try to</string>
+    <string name="translate">translate</string>
 </resources>
