Added button to set lyric quality to 1

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -73,4 +73,5 @@
     <string name="loading">cargando resultado...</string>
     <string name="tryto">intenta</string>
     <string name="translate">traducir</string>
+    <string name="set_quality_to_1">Establece la calidad en 1</string>
 </resources>
