--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="loading">loading result...</string>
     <string name="tryto">try to</string>
     <string name="translate">translate</string>
+    <string name="set_quality_to_1">Set quality to 1</string>
 </resources>
