--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -70,8 +70,10 @@
     <string name="random">Losowe</string>
     <string name="reveal_word">Odsłoń wyraz</string>
     <string name="show_translation">Pokaż tłumaczenie</string>
-    <string name="loading">ładowanie napisu...</string>
+    <string name="loading">ładowanie napisu…</string>
     <string name="tryto">spróbuj</string>
     <string name="translate">przetłumaczyć</string>
     <string name="set_quality_to_1">Ustaw jakość na 1</string>
+    <string name="choosing_source">Wybieranie źródła</string>
+    <string name="movies_and_series">Filmy i seriale</string>
 </resources>
