Now classes call MovieRepository methods, not the dao ones

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -65,7 +65,7 @@
     <string name="difficulty">Poziom trudności</string>
     <string name="easy">Łatwy</string>
     <string name="medium">Średni</string>
-    <string name="hard">Ciężki</string>
+    <string name="hard">Trudny</string>
     <string name="next">Dalej</string>
     <string name="random">Losowe</string>
     <string name="reveal_word">Odsłoń wyraz</string>
