--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -76,4 +76,5 @@
     <string name="set_quality_to_1">Ustaw jakość na 1</string>
     <string name="choosing_source">Wybieranie źródła</string>
     <string name="movies_and_series">Filmy i seriale</string>
+    <string name="are_you_sure">Czy jesteś tego pewien? Wykonanej czynności nie będziesz mógł cofnąć.</string>
 </resources>
