--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -77,4 +77,5 @@
     <string name="choosing_source">Selección del fuente</string>
     <string name="movies_and_series">Películas y series</string>
     <string name="are_you_sure">¿Está seguro de eso? No podrá deshacer esta acción.</string>
+    <string name="copied_to_clipboard">Copiado al portapapeles</string>
 </resources>
