--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -77,4 +77,5 @@
     <string name="choosing_source">Wybieranie źródła</string>
     <string name="movies_and_series">Filmy i seriale</string>
     <string name="are_you_sure">Czy jesteś tego pewien? Wykonanej czynności nie będziesz mógł cofnąć.</string>
+    <string name="copied_to_clipboard">Skopiowano do schowka</string>
 </resources>
