--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="choosing_source">Choosing source</string>
     <string name="movies_and_series">Movies and series</string>
     <string name="are_you_sure">Are you sure about that? You will not be able to undo this action.</string>
+    <string name="copied_to_clipboard">Copied to clipboard</string>
 </resources>
